fixed home-page bg on small devices

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -208,4 +208,8 @@ button[name="sendemail"] {
   .app-badge {
     height: 45px;
   }
+
+  .bg-crink {
+    background-position-x: -9rem;
+  }
 }
